# metv

./: .gitignore  CNAME  README.md  chs.txt  index.html  meFunctions.js  movs.txt  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
src/: chs.txt  movs.txt
src-tauri/: Cargo.toml  tauri.conf.json
src/css/: meDesign.css
src/js/: meFunctions.js
src/pages/: Copia de play.html  play.html
src/pwa/: manifest.json
