[package]
name = "metv"
version = "0.1.2"
description = "meTV Player m3u and mp4"
authors = ["appjava.dev"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "1.6.0", features = ["shell-all", "api-all"] }
tauri-plugin-log = "2"

[profile.release]
opt-level = "z"     # Optimiza el compilador estrictamente para tamaño del binario
lto = true          # Link Time Optimization (Optimización cruzada ultra-agresiva)
codegen-units = 1   # Reduce el paralelismo para maximizar la calidad de optimización
panic = "abort"     # Elimina código de rastreo pesado (unwinding) de pánicos de Rust
strip = true        # ¡EL MILAGRO! Remueve de golpe todos los símbolos de depuración del binario